Fix: set align, change background color

--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+html,
+body {
+  height: 100%;
+}
+
+html {
+  display: table;
+  margin: auto;
+}
+
+body {
+  display: table-cell;
+  vertical-align: middle;
+  background-color: rgb(34, 34, 34);
+}
+
+/*body tag 자체를 web page중앙에 정렬*/
+
 main {
   width: 300px;
   /*main contents 사이즈지정
